**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.12 beta
-----------------------
  - Fixed defect #122 Patch for MovieNFOScanner.java for old style imdb urls
  - Enhancement #123 improved MPAA rating organization in the gfb107 skin
    Added certification.ordering property to skin.properties in both gfb107 skins
  - Enhancement #127 TV Episode numbering scheme
    There is only possibility to fix this issue by users themselves.
    Episode name formatting was moved from java and XML to skin layout.
  - Fixed defect #132 Unable to parse year of TV episode on IMDb
  - Fixed defect #134 Rating calculation not correct
  - Fixed defect #185 IMDB scanner is returning rating = "-1" in xml file
  - Fixed defect #187 trailing character in some IMDB plot output
  - Fixed defect #188 Runtime is sometimes showing up as UNKNOWN
  - Enhancement #189 Hungarian flag support
    Also resizing of other SD flags
  - Enhancement #181 Support of local stored coverarts instead of search for them on the internet
  - Enhancement #201 Download of coverArt on temp directory instead of final Jukebox Directory
   
MovieJukebox 1.0.11 beta
-----------------------
  - Enhancement Issue #78 Custom coverart Enhancement
    Quick first implementation (not flexible but working ;) )
    Scan the .nfo file for the URL of poster (currently only URL starting with
    http:// and ending with .jpg or .JPG)
    If this URL exists, set it as poster URL and to not search for another poster.
  - Enhancement Issue #81 Additional Video Sources (HD2DVD)
  - Fixed defect #96 Multiple Genres cause multiple entries under the "master" genres
  - Enhancement Issue #97 Prefix stripping is case sensitive
  - Enhancement Issue #105 Support for MP4 file format added
  - Fixed defect #106 XML indexes generation is very long
  - Enhancement Issue #107 Selective resizing of poster images